# madeline

./: .gitignore  CMakeLists.txt  README.md
src/: hexcells.cpp  hexcells.h  level.h  main.cpp  prover.cpp  prover.h  ui.cpp  ui.h
src/lib/: hexgrid.cpp  hexgrid.h  hexgrid_json.h  json.h
